# Chip-8_Emulator

./: +  CMakeLists.txt
include/: chip8.h  defines.h  instructions.h
src/: chip8.c  instructions.c  main.c
